Site traduit, bouton pour changer de langue en travail, messages d'erreur à fixer

--- a/en/footer.html
+++ b/en/footer.html
@@ -12,10 +12,10 @@
         <div class="footerbox1">@2022 SmartCare</div>
         <div class="barre"></div>
         <div class="footerbox2">
-            <a href="about.php" class="link1">A propos</a>
-            <a href="help.php" class="link1">Aide</a>
-            <a href="contact.php" class="link1">Contacter nous</a>
-            <a href="confidentiality.php" class="link1">Confidentialité</a>
+            <a href="about.php" class="link1">About</a>
+            <a href="help.php" class="link1">Help</a>
+            <a href="contact.php" class="link1">Contact us</a>
+            <a href="confidentiality.php" class="link1">confidentiality</a>
             <a href="#"><img src="../img/Instagram Copy 4.svg" class="Instagram Copy 4"></a>
             <a href="#"><img src="../img/Instagram Copy 3.svg" class="Instagram Copy 3"></a>
             <a href="#"><img src="../img/Instagram Copy 2.svg" class="Instagram Copy 2"></a>
